# remote_agents_with_a2a

./: .env.example  README.md  main.py  pyproject.toml
local_agent/: agent.py  prompt.py
local_agent/a2a/: connected_agents.py
local_agent/tools/: send_remote_message.py
math_agent/: .env.example  a2a_server.py  agent_executor.py  graph.py  node.py  prompt.py
translator_agent/: a2a_server.py  agent_executor.py  graph.py  node.py  prompt.py
